--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
+    "@reduxjs/toolkit": "2.7.0",
     "@tarojs/components": "4.0.9",
     "@tarojs/helper": "4.0.9",
     "@tarojs/plugin-framework-react": "4.0.9",
@@ -61,6 +62,7 @@
     "@tarojs/taro": "4.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "9.2.0",
     "taro-ui": "^3.3.0"
   },
   "devDependencies": {
