--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "postcss": "^8.5.3",
     "react-refresh": "^0.14.0",
-    "sass": "^1.75.0",
+    "sass": "1.78.0",
     "stylelint": "^16.4.0",
     "tailwindcss": "^3.4.17",
     "terser": "^5.30.4",
